[package]
name = "google-ddns"
version = "0.1.0"
authors = ["taylor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.0", features = ["blocking"]}
pnet = "0.27.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }